--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,6 @@
 {
   "markdownlint.ignore": [".github/*", ".cPanel/*"],
-  "[markdown]": {
-    "editor.formatOnSave": true,
-    "editor.formatOnPaste": true
-  },
-  "[prettier]": {
-    "editor.formatOnSave": true,
-    "editor.formatOnPaste": true
-  },
-  "cSpell.words": ["callout", "vercel"]
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
