--- a/cPanel/.htaccess
+++ b/cPanel/.htaccess
@@ -1,5 +1,3 @@
-# php -- BEGIN cPanel-generated handler, do not edit
-# Set the “ea-php82” package as the default “PHP” programming language.
 <IfModule mod_rewrite.c>
     DirectoryIndex index.html
     RewriteEngine on
@@ -13,6 +11,5 @@
     
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME}.html -f
-    RewriteRule ^(.*?)/?$ $1.html [L]
+    RewriteRule . /index.html [L]
 </IfModule>
-# php -- END cPanel-generated handler, do not edit
