--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,9 @@ jobs:
           npm install
           npm run build
 
+      - name: Move .htaccess into build
+        run: mv cPanel/.htaccess dist/
+
       - name: List output files
         run: find dist/ -print
 
