Fix actions again

--- a/.github/workflows/inprogress.yml
+++ b/.github/workflows/inprogress.yml
@@ -7,6 +7,11 @@ on:
 jobs:
   move-assigned-card:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+
     steps:
       - uses: alex-page/github-project-automation-plus@7ffb872c64bd809d23563a130a0a97d01dfa8f43
         with:
