--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "3.2.5",
     "react-router-dom": "^6.22.2",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4",
-    "prettier": "3.2.5"
+    "vite": "^5.1.4"
   }
 }
