--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "dbaeumer.vscode-eslint",
     "christian-kohler.npm-intellisense",
     "davidanson.vscode-markdownlint",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "shd101wyy.markdown-preview-enhanced"
   ]
 }
