--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.11",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
+    "clipboard-copy": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
@@ -31,7 +33,6 @@
     "prettier": "3.2.5",
     "react-router-dom": "^6.22.2",
     "typescript": "^5.2.2",
-    "vite": "^5.1.7",
-    "prettier": "3.2.5"
+    "vite": "^5.1.7"
   }
 }
