--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,4 +23,4 @@ jobs:
         run: cspell .
 
       - name: Run prettier
-        run: npx prettier . --check
+        run: npx prettier . --check --no-semi
