--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,5 +6,4 @@
 # review when someone opens a pull request.
 *       @DoodlePooge
 
-content/ @ChipRedStar
-assets/ @ChipRedStar
+src/app/bryan/ @ChipRedStar
